优化自动配置导出与实体扫描策略